kube/staging.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stg-service-brmobi-web
  labels:
    app: stg-brmobi-web
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: stg-brmobi-web
