kube/production.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prd-ingress-brmobi-web
spec:
  backend:
    serviceName: prd-service-brmobi-web
    servicePort: 80
