kube/staging.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stg-ingress-brmobi-web
spec:
  backend:
    serviceName: stg-service-brmobi-web
    servicePort: 80
